name:                brainfuck-hs
version:             0.1.0.0
synopsis:            Brainfuck interpreter in Haskell
homepage:            https://github.com/abesto/brainfuck-hs
license:             MIT
license-file:        LICENSE
author:              Zoltan Nagy
maintainer:          abesto@abesto.net
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Brainfuck
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >=4.7 && <4.8
                  , array >= 0.5.0.0 && < 0.6.0.0
                  , containers >= 0.5.5.1 && < 0.6.0.0

executable brainfuck-hs
  hs-source-dirs:   main
  main-is:          Main.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >=4.7 && <4.8
                  , brainfuck-hs 

test-suite brainfuck-hs-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >=4.7 && <4.8
                  , brainfuck-hs
                  , hspec >= 2.1.4 && < 3.0.0
                  , QuickCheck >= 2.6 && < 3.0
